[package]
name = "subd-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
once_cell = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
twitch-irc = { version = "4.0.0", default-features = false, features = [ "with-serde" ] }
twitch_api2 = { version = "0.6.1", features = [ "pubsub", "twitch_oauth2" ]}
tracing = "0.1"
