[package]
name = "subd-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = [] }
uuid.workspace = true

twitch-irc = { workspace = true, default-features = false, features = [ "with-serde" ] }
twitch_api2 = { workspace = true, features = [ "pubsub", "twitch_oauth2" ]}
