[package]
name = "subd-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = [], optional = true }
uuid.workspace = true

# twitch-irc = { workspace = true, default-features = false, features = [ "with-serde" ] }
# TODO: It would be great to figure out how to do this without havin to copy this in
twitch-irc = { version = "4.0.0", default-features = false, features = [
    "with-serde",
] }
twitch_api = { version = "0.7.0-rc.7", features = ["pubsub"] }
twitch_oauth2 = "0.12.7"

[features]
default = ["sql"]
sql = ["dep:sqlx"]
