[package]

name = "subd-utils"
version = "0.0.1"
edition = "2021"

[dependencies]

libc = "0.2.150"
# subd-types = { path = "../subd-types/" }
# stable_diffusion = { path = "../stable_diffusion/" }
# obs_service = { path = "../obs_service/" }
# obs_move_transition = { path = "../obs_move_transition/" }
# obws = "0.10"
# chrono.workspace = true
# serde.workspace = true
# anyhow.workspace = true
#
# # Test
# tokio.workspace = true
