[package]
name = "subd-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subd-types = { path = "../subd-types/" }

serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = [ "wasmbind" ] }
tungstenite = { workspace = true, features = [] }
twitch-irc = { workspace = true, default-features = false, features = [
    "with-serde",
] }

yew = "0.19.3"
yew-hooks = "0.1.56"
gloo-timers = "0.2.4"
wasm-logger = "0.2.0"
log = "0.4.17"

# This is cuz of wasm?
getrandom = { version = "0.2", features = ["js"] }
# ^^^^^^^
