[package]
name = "subd-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subd-types = { path = "../subd-types/", default-features = false, features = [] }

serde_json.workspace = true
twitch-irc = { version = "4.0.0", default-features = false, features = [
    "with-serde",
] }

yew = "0.19.3"
yew-hooks = "0.1.56"
gloo-timers = "0.2.4"
wasm-logger = "0.2.0"
log = "0.4.17"

# We needed this for wasm?
# getrandom = { version = "0.2", features = ["js"] }
